force-app/main/default/objects/Message_Subject__c/Message_Subject__c.object-meta.xml
<CustomObject>
    <label>Message Subject</label>
    <nameField>
        <displayFormat>MS-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Subjects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>