force-app/main/default/objects/Message_Subject__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate Account with the Message Subject.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Message Subjects</relationshipLabel>
    <relationshipName>Message_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>