force-app/main/default/objects/Message_Subject__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <description>This picklist field offers options for categorizing archived records.</description>
    <label>Archived</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>All</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Portal</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CRM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>