force-app/main/default/objects/Message_Subject__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate Contact with the Message Subject.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Message Subjects</relationshipLabel>
    <relationshipName>Message_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>