force-app/main/default/objects/Message_Subject__c/fields/Grand_Parent_Message__c.field-meta.xml
<CustomField>
    <fullName>Grand_Parent_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original Message to which all the child Messages have been originated and linked.</description>
    <label>Grand Parent Message</label>
    <referenceTo>Message_Subject__c</referenceTo>
    <relationshipLabel>Message Subjects (Message Subject)</relationshipLabel>
    <relationshipName>Message_Subjects1</relationshipName>
    <type>Lookup</type>
</CustomField>