force-app/main/default/objects/Message_Subject__c/fields/IsPortal__c.field-meta.xml
<CustomField>
    <fullName>IsPortal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine whether the message is from portal or CRM.</description>
    <label>IsPortal</label>
    <type>Checkbox</type>
</CustomField>