force-app/main/default/objects/Message_Subject__c/fields/Parent_Message__c.field-meta.xml
<CustomField>
    <fullName>Parent_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Immediate parent of the current record.</description>
    <label>Parent Message</label>
    <referenceTo>Message_Subject__c</referenceTo>
    <relationshipLabel>Message Subjects</relationshipLabel>
    <relationshipName>Message_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>