force-app/main/default/objects/Message_Subject__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate provider with the Message Subject.</description>
    <label>Provider</label>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Message Subjects</relationshipLabel>
    <relationshipName>Message_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>