force-app/main/default/objects/Message_Subject__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <description>This field is used to store the value by whom the message is createdby.</description>
    <formula>CreatedBy.FirstName +&quot; &quot;+ CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sender</label>
    <type>Text</type>
</CustomField>