force-app/main/default/objects/Message_Subject__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>This field is used for storing the message subject value.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>