force-app/main/default/objects/Message_Subject__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate User with the Message Subject.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Message_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>