force-app/main/default/objects/Message_Subject__c/fields/Viewed_Status__c.field-meta.xml
<CustomField>
    <fullName>Viewed_Status__c</fullName>
    <description>This field is used to determine whether the
 message is viewed or not.</description>
    <label>Viewed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>