force-app/main/default/objects/Message_Subject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>(1 OR 2) AND (3 OR 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sender__c</columns>
    <columns>IsPortal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Archived__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Archived__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>Deleted__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Deleted__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>All</label>
</ListView>