force-app/main/default/objects/Message_Subject__c/listViews/Archive.listView-meta.xml
<ListView>
    <fullName>Archive</fullName>
    <booleanFilter>1 AND (2 OR 3 )</booleanFilter>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Archived__c</field>
        <operation>equals</operation>
        <value>0,1</value>
    </filters>
    <filters>
        <field>Deleted__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>Deleted__c</field>
        <operation>equals</operation>
    </filters>
    <label>Archive</label>
</ListView>