force-app/main/default/objects/Message_Subject__c/listViews/Bookmark.listView-meta.xml
<ListView>
    <fullName>Bookmark</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Bookmarked__c</field>
        <operation>equals</operation>
        <value>0,1</value>
    </filters>
    <filters>
        <field>Deleted__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Deleted__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Bookmark</label>
</ListView>