force-app/main/default/objects/Message_Subject__c/listViews/Outbox.listView-meta.xml
<ListView>
    <fullName>Outbox</fullName>
    <booleanFilter>1 AND (2 OR 3) AND (4 OR 5)</booleanFilter>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sender__c</columns>
    <columns>IsPortal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsPortal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Archived__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>Archived__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Deleted__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Deleted__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Outbox</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>